Ingress_blue_green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresses
spec:
  rules:
    http:
      paths: 
        path: /blue
        pathType: Prefix
        backend:
          service:
            name: Blue
            port: 
              number: 8080
         path: /green
         pathType: Prefix
         backend: 
           service:
             name: green
             port:
               number: 9090
